// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks correct response to tab-selection in the view-pane 1`] = `
<div
  id="content-tabs-panes-grid"
>
  <div>
    Maps Div
  </div>
</div>
`;

exports[`checks correct response to tab-selection in the view-pane 2`] = `
<div
  id="content-tabs-panes-grid"
>
  <div>
    Data Div
  </div>
</div>
`;
